# rotom

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.coding  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  TASKS.md  TODO.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: config.py  logging_setup.py  main.py
api/app/agent/: graph.py  prompts.py  toolkit.py  untrusted.py
api/app/api/: routes.py
api/app/channels/: telegram.py
api/app/llm/: provider.py
api/app/observability/: events.py  sink.py  sqlite_sink.py
api/app/scheduler/: jobs.py
api/app/store/: db.py  observability.py
api/app/tools/drafts/: composer.py
api/app/tools/github/: __init__.py  issues.py  review.py  runner.py  sandbox.py
api/app/tools/gmail/: auth_setup.py  classifier.py  client.py  drafter.py  footer.py  injection.py  pipeline.py  service.py
api/app/workflows/: client.py  code_issue.py  hello.py  lib.py  morning_digest.py  registry.py
api/tests/: conftest.py  test_agent_tools.py  test_api_routes.py  test_classifier.py  test_code_issue_workflow_import.py  test_coding_paths.py  test_coding_run_model.py  test_composer.py  test_config_attachments.py  test_config_validation.py  test_db_migrate.py  test_drafter.py  test_email_footer.py  test_github_issues.py  test_github_review.py  test_github_sandbox.py  test_gmail_client.py  test_injection.py  test_observability.py  test_observability_logs.py  test_pipeline.py  test_provider.py  test_reminders.py  test_telegram_utils.py  test_untrusted.py  test_work_on_issue_tool.py  test_workflow_lib.py
(+143 files in other folders)
